--- a/package.json
+++ b/package.json
@@ -3,12 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "@fortawesome/react-native-fontawesome": "^0.2.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "hamburgers": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0"
+    "react-hamburger-menu": "^1.2.1",
+    "react-hamburgers": "^1.0.0",
+    "react-router-dom": "^5.2.0",
+    "react-svg": "^11.0.22",
+    "styled-components": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
