--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "star-wars",
-  "version": "0.1.0",
+  "name": "web-rah",
+  "version": "1.0.0",
   "private": true,
+  "homepage": "http://brubriele.github.io/redeapoiohumanitario",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
@@ -13,8 +14,6 @@
     "hamburgers": "^1.1.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-hamburger-menu": "^1.2.1",
-    "react-hamburgers": "^1.0.0",
     "react-router-dom": "^5.2.0",
     "react-svg": "^11.0.22",
     "styled-components": "^5.1.0"
@@ -23,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^2.2.0",
     "gulp": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "react-scripts": "^3.4.1"
