--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "web-rah",
   "version": "1.0.0",
   "private": true,
-  "homepage": "http://brubriele.github.io/GT-WEB-RAH",
+  "homepage": "https://brubriele.github.io/GT-WEB-RAH",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
